CHANGELOG

2.1.7
UTIL:

BUGFIX:

GENERAL:


2.1.6 (20230525)
UTIL:
* type=rule-compare | improve output to also fit for argument 'shadow-json'
* class Address/ServiceCommon | improve text output for type=address-/service-merger
* type=upload | extend to copy XML node from argument in= to argument out= - first version focus on Device-Group

BUGFIX:
* type=service-merger | bugfix for merging objects which are overwritten but with different protocol
* type=address/service-merger | bugfix - extend validation if objects can be merged
* class PanoramaConf | bugfix for type=device actions=devicegroup-create:NAME,parent - parentDG was not set correctly
* type=address/service actions=move:DG | bugfix - add additional validation for move to upper/lower level DG - if another object with same name will change behaviour
* f5_bigIP | bugfix for ServiceGroup which can not handle Description based on PAN-OS
* type=addressgroup-/servicegroup-merger | bugfix - extend validation to not merge/move objects if not same members
* type=xml-issue | bugfix - wrong XML node variable used for application Node deletion

GENERAL:
* dynamic content updated to version: 8713-8071


2.1.5 (20230516)
UTIL:
* develop utility | introduce rule_compare_src_dst_srv_summary
* type=device | introduce actions=template-clone:NEWtemplateNAME 'filter=(name eq OLDtemplateNAME'
* type=rule actions=exporttoexcel:file.html,ResolveAddressSummary | extend with resolveValue field
* class RulewithUserID - read user information always as lower case - no case sensitive needed
* type=rule-merger | argument additionalmatch - change supported argument from 'logprof' to 'logsetting'
* type=address 'filter=(object is.region)' - extend display with custom region value information
* type=rule-compare | introduce new utility - to compare rule SRC/DST/SRV of two files

BUGFIX:
* type=address | bugfix for filter=(value string.XYZ ) if Object of type Region is hit